--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-chart-card",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Weather card with charts for Home Assistant Lovelace UI",
   "keywords": [
     "home-assistant",
@@ -15,13 +15,14 @@
   "author": "Yevgeniy Prokopenko",
   "license": "MIT",
   "dependencies": {
-    "lit": "^2.0.2",
-    "chart.js": "3.5.1",
-    "chartjs-plugin-datalabels": "^2.0.0"
+    "chart.js": "3.9.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "lit": "^2.0.2"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "acorn": "^8.4.1",
+    "eslint": "^5.16.0",
     "rollup": "^2.33.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-serve": "^1.1.0"
